# freeciv-agent

./: .gitignore  ARRAY_DIFF_IMPLEMENTATION.md  CLAUDE.md  DELTA_PROTOCOL.md  README.md  VALIDATION_REPORT.md  fc_ai.py  pyproject.toml  requirements.txt
.claude/agents/: freeciv-research.md  packet-handler-builder.md
.devcontainer/: Dockerfile  devcontainer.json
fc_client/: client.py  delta_cache.py  game_state.py  handlers.py  packet_debugger.py  packet_specs.py  protocol.py
fc_client/handlers/: __init__.py  chat.py  general.py  info.py  pregame.py  ruleset.py  unknown.py
tests/: __init__.py  conftest.py
tests/async/: __init__.py  test_client_async.py  test_compression.py  test_handlers.py  test_protocol_async.py
tests/integration/: __init__.py  test_game_info_array_diff.py  test_protocol_integration.py  test_ruleset_base.py  test_ruleset_city.py  test_ruleset_specialist.py
tests/unit/: __init__.py  test_array_diff.py  test_delta_cache.py  test_game_state.py  test_packet_debugger.py  test_packet_specs.py  test_protocol.py  test_protocol_clause.py  test_protocol_effect.py  test_protocol_terrain_control.py
tools/: validate_packet_files.py
